google login remainig

--- a/frontend/src/components/RestaurantComponents/OrderTitleComponent/DatePicker.module.css
+++ b/frontend/src/components/RestaurantComponents/OrderTitleComponent/DatePicker.module.css
@@ -46,5 +46,5 @@
 }
 
 .unavailable:hover {
-  background-color: #e0e0e0; /* No hover effect for unavailable slots */
+  background-color: #ed4253; /* No hover effect for unavailable slots */
 }
