--- a/frontend/src/utils/RestaurantUtils/RatingNumberBox/RatingNumberBox.module.css
+++ b/frontend/src/utils/RestaurantUtils/RatingNumberBox/RatingNumberBox.module.css
@@ -1,52 +1,53 @@
-.rating{
-    margin: 0.2rem;
-    width: 35px;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    border: var(--brd1);
-    border-radius: 5px;
-    cursor: pointer;
+.rating {
+  margin: 0.2rem;
+  width: 35px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  border: var(--brd1);
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-.acRatingR{
-    background-color: var(--bg-redish1);
+.acRatingR {
+  background-color: var(--bg-redish1);
 }
-.acRatingR2{
-    background-color: var(--bg-redish5);
+.acRatingR2 {
+  background-color: var(--bg-redish5);
 }
-.acRatingYG{
-    background-color: var(--bg-goldish);
+.acRatingYG {
+  background-color: var(--bg-goldish);
 }
-.acRatingG{
-    background-color: var(--bg-greenish);
+.acRatingG {
+  background-color: var(--bg-greenish);
 }
-.acRatingDG{
-    background-color: var(--bg-dark-greenish);
-}
-
-.rtgTxt{
-    font-size: 1rem;
-    font-weight: 600;
-    color: var(--color-p1-text);
+.acRatingDG {
+  background-color: var(--bg-dark-greenish);
 }
 
-.acRtgTxt{
-    color: var(--color-white);
+.rtgTxt {
+  font-size: 1rem;
+  font-weight: 600;
+  color: var(--color-p1-text);
 }
 
-.imgBox{
-    width: 12px;
-    height: 12px;
-    margin: 0 0.2rem;
+.acRtgTxt {
+  color: var(--color-white);
 }
 
-.icon{
-    width: 100%;
-    height: 100%;
-    filter: brightness(0) saturate(100%) invert(76%) sepia(8%) saturate(10%) hue-rotate(319deg) brightness(82%) contrast(86%);
+.imgBox {
+  width: 12px;
+  height: 12px;
+  margin: 0 0.2rem;
 }
 
-.acIcon{
-    filter: invert(1);
+.icon {
+  width: 100%;
+  height: 100%;
+  filter: brightness(0) saturate(100%) invert(76%) sepia(8%) saturate(10%)
+    hue-rotate(319deg) brightness(82%) contrast(86%);
+}
+
+.acIcon {
+  filter: invert(1);
 }
